# beepe

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.backup  LICENSE  MIGRATION.md  README.md  benchmark_results.json
.github/workflows/: benchmark.yml  test.yml
.hypothesis/constants/: 3d80ce836926801d
.hypothesis/examples/04e6b3400353b141/: 34eaf6dd71206a63  3e1f212ee5f078d6  45c9625a1298e932  49c246b30035ab93  4b8763e09054a581  566e2a6f5f0003b2  8dcc7ba24b930131  94d2e60c23ea02c5  e8235985a6c4575e
.hypothesis/examples/49c246b30035ab93/: 06fe432a67e3c5f3  1141f57dd8af521a  1c0ce08b927df16c  1c94e87c91f18688  1db7531f9c7d9ad4  2c61b2f7bf02ec45  30153af0080ddebd  3e1e15752ce6e2b6  49992d57d47d9eae  58fed76357e2f3f2  5d91bf7d439023cf  62bc63b881b47286  7e43389e400fe3a2  7f3d8002d283a13d  8c820a237f9cd68c  931b55ba7e88369d  a589ae4e746665ac  a93a0c6fa04c5d3a  b460cf5573a42d6e  b5e3e91eee4b8c09  b94a701a509193a7  bbce5ff5a0b6418b  c91a20edd0cdd090  caa3ae63e821d772  d6a2801fd1e60424  ee15d72acb177014  f2d256b9ab81e380  fec0916f9300f3c6  ff97ab094a3a3e97  ffa5b67f5437b012
.hypothesis/examples/4b8763e09054a581/: 030bf2dc6c037ddb  0c7445224a5f97f3  102a6b399d94ae2a  11f920f6be3cc881  1381869fc92d69bd  168b3d4fadb8422e  175b11e2660ae882  17d9243ee0995116  19da80cdd1f3f487  1b646a8a42b48dae  1d864073d6eb7a69  1e8a28c33cae1141  1ee05ca616a9cff9  2414f13c0d465807  24266028c267b160  27c8af843f1b36b7  29010e136704e0bc  290edcc5b0f92f7c  2a33fb55257b770b  2a853a64755a9446  2c5dcd21254b028a  2f4fd0a9908ffd8e  3347ca74cf9ac05b  359ae0c0de34a5d5  375ee1cd9515fd7b  390500c3d0f8e4dc  40ec20b23a3acc2f  41d2d7651796a3c6  47996b8a535fef7a  48659206e5b1525c  494bdc2239a44184  4b111f76d4d473a4  50ea7fb6651ed73d  58f147df7831080e  595fbaff988f18b0  5bbd38b903333842  5d31ae970bcdc317  61b09cac899a1741  6537489425074d07  655a40d5024d05c1  (+61 more)
.hypothesis/examples/566e2a6f5f0003b2/: 3d86e33e149edf5b  5f0c64658ddba4e6  acd6d459813f4a1a
.hypothesis/examples/8dcc7ba24b930131/: ff8261eeb197f54b
.hypothesis/examples/e8235985a6c4575e/: 2134c29897647527  2fe56b8f14d9b648  3fe89f68fc33f0dc  403455365828da2b  46ea1e93d2857152  6a6c685052337b35  7c7dc217dbaa40fd  907a188376b91639  (+5 more)
benchmarks/: README.md  benchmark.py  comprehensive_benchmark.py  pyproject.toml  run_benchmark.sh
benchmarks/results/: comprehensive_benchmark_results.json
cli/src/: main.rs
cli/src/src/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  vocab_v2.rs
crates/core/src/core/: merges.rs  mod.rs  priority.rs  vocab.rs
crates/core/src/encoding/: byte_level.rs  byte_level_v2.rs  char_level.rs  mod.rs
crates/python/: Cargo.toml  pyproject.toml  pytest.ini
crates/python/python/beepe/: __init__.py
crates/python/src/: encoding_mode.rs  error.rs  lib.rs  special_tokens.rs  tokenizer.rs
crates/python/tests/: test_batch.py
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
crates/tokenizer/src/io/: format.rs  load.rs  mod.rs  save.rs
crates/tokenizer/src/pre_tokenizer/: byte_fallback.rs  mod.rs  normalize.rs  split.rs
crates/tokenizer/src/tokenizer/: mod.rs
crates/tokenizer/src/utils/: cache.rs  mod.rs
crates/training/: Cargo.toml
crates/training/src/: lib.rs
crates/training/src/training/: counter.rs  mod.rs  trainer.rs  trainer_v2.rs
tests/: __init__.py  conftest.py  test_api_compatibility.py  test_basic.py  test_errors.py  test_offsets.py  test_performance.py  test_pickle.py  test_repetitive.py  test_roundtrip.py  test_special_tokens.py  test_tiktoken_comparison.py  test_unicode.py
tests/fixtures/: __init__.py  test_data.py
(+10 files in other folders)
