[workspace]
resolver = "2"
members = ["crates/*", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Core data structures (CRITICAL for performance)
ahash = { version = "0.8", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }
dary_heap = "0.3"

# Parallel processing
rayon = "1.10"

# Regular expressions and text processing
regex = "1.10"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Development dependencies
criterion = "0.6"
proptest = "1.5"
rand = "0.9"
