[package]
name = "beepe-core"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Workspace dependencies
ahash.workspace = true
compact_str.workspace = true
dary_heap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
