[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "beepe"
version = "0.1.0"
description = "Python bindings for the beepe BPE tokenizer"
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.8.0",
    "hypothesis>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
