[package]
name = "beepe-tokenizer"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Workspace dependencies
beepe-core = { path = "../core" }
beepe-training = { path = "../training" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-normalization.workspace = true
ahash.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
