[package]
name = "beepe-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "beepe"
path = "src/main.rs"

[dependencies]
# Library crate - re-exports all public APIs
beepe-tokenizer = { path = "../crates/tokenizer" }

# CLI-only dependencies
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
